Project MarketMemory {
  database_type: 'PostgreSQL'
  Note: 'Raw ingestion, clean data, labels, embeddings and prediction outputs.'
}

Table ingestion_runs {
  id uuid [pk]
  source_type text
  source_name text
  status text
  input_path text
  started_at timestamptz
  finished_at timestamptz
  records_seen int
  records_inserted int
  records_failed int
}

Table raw_news_items {
  id uuid [pk]
  ingestion_run_id uuid [ref: > ingestion_runs.id]
  source_name text
  external_id text
  source_url text
  fetched_at timestamptz
  payload jsonb
  payload_hash text
  processing_status text
}

Table raw_market_bars {
  id uuid [pk]
  ingestion_run_id uuid [ref: > ingestion_runs.id]
  provider text
  ticker text
  interval text
  observed_at timestamptz
  payload jsonb
  payload_hash text
  processing_status text
}

Table assets {
  id uuid [pk]
  ticker text [unique]
  asset_name text
  asset_class text
  benchmark_asset_id uuid [ref: > assets.id]
  currency text
  exchange_name text
  exchange_timezone text
  calendar_name text
  is_active boolean
}

Table event_clusters {
  id uuid [pk]
  cluster_key text [unique]
  event_title text
  event_type text
  first_event_at timestamptz
  last_event_at timestamptz
}

Table news_articles {
  id uuid [pk]
  raw_news_item_id uuid [ref: > raw_news_items.id]
  event_cluster_id uuid [ref: > event_clusters.id]
  primary_asset_id uuid [ref: > assets.id]
  source_name text
  external_id text
  title text
  summary text
  body_text text
  published_at timestamptz
  canonical_url text [unique]
  topic text
  article_type text
  leakage_status text
  duplicate_group_key text
  is_active boolean
}

Table article_assets {
  article_id uuid [ref: > news_articles.id]
  asset_id uuid [ref: > assets.id]
  relevance_source text
  relevance_score numeric
  is_primary boolean

  indexes {
    (article_id, asset_id) [pk]
  }
}

Table market_prices {
  id uuid [pk]
  raw_market_bar_id uuid [ref: > raw_market_bars.id]
  asset_id uuid [ref: > assets.id]
  provider text
  interval text
  observed_at timestamptz
  open numeric
  high numeric
  low numeric
  close numeric
  adjusted_close numeric
  volume numeric
  is_complete boolean
}

Table article_asset_labels {
  id uuid [pk]
  article_id uuid [ref: > news_articles.id]
  asset_id uuid [ref: > assets.id]
  benchmark_asset_id uuid [ref: > assets.id]
  alignment_method text
  reference_time timestamptz
  reference_price numeric
  abnormal_return_1d numeric
  abnormal_return_3d numeric
  abnormal_return_5d numeric
  abnormal_return_10d numeric
  abnormal_return_20d numeric
  peak_positive_return numeric
  peak_positive_day int
  peak_negative_return numeric
  peak_negative_day int
  reversal_flag boolean
  impact_shape text
  label_status text
}

Table model_versions {
  id uuid [pk]
  model_name text
  model_type text
  version text
  embedding_dimension int
  parameters jsonb
  metrics jsonb
  artifact_uri text
  is_active boolean
}

Table news_embeddings {
  id bigint [pk]
  article_id uuid [ref: > news_articles.id]
  model_version_id uuid [ref: > model_versions.id]
  text_variant text
  embedding vector
}

Table prediction_runs {
  id uuid [pk]
  query_article_id uuid [ref: > news_articles.id]
  asset_id uuid [ref: > assets.id]
  model_version_id uuid [ref: > model_versions.id]
  generated_at timestamptz
  k_neighbors int
  similarity_threshold numeric
  evidence_count int
  reliability text
  abstained boolean
  status text
}

Table prediction_horizons {
  id bigint [pk]
  prediction_run_id uuid [ref: > prediction_runs.id]
  horizon_days int
  direction text
  probability_up numeric
  probability_neutral numeric
  probability_down numeric
  expected_abnormal_return numeric
  lower_bound numeric
  upper_bound numeric
}

Table historical_analogues {
  id bigint [pk]
  prediction_run_id uuid [ref: > prediction_runs.id]
  historical_article_id uuid [ref: > news_articles.id]
  rank int
  historical_title text
  historical_published_at timestamptz
  text_similarity numeric
  regime_similarity numeric
  combined_similarity numeric
  neighbour_weight numeric
  abnormal_return_1d numeric
  abnormal_return_5d numeric
  abnormal_return_20d numeric
  impact_shape text
}

Table model_evaluations {
  id uuid [pk]
  model_version_id uuid [ref: > model_versions.id]
  split_name text
  horizon_days int
  balanced_accuracy numeric
  macro_f1 numeric
  brier_score numeric
  return_mae numeric
  coverage numeric
}
